unity-api (8.1-0ubuntu1) UNRELEASED; urgency=medium

  * unity::util - add GObject shared memory utility classes
    and helper methods.

 -- Pete <pete.woods@canonical.com>  Wed, 11 Jan 2017 16:07:23 +0000

unity-api (8.0+17.04.20170110.1-0ubuntu1) zesty; urgency=medium

  [ Albert Astals Cid ]
  * Enable -Wsuggest-override
  * Use the new Q_ENUM (Qt 5.5)

  [ Nick Dedekind ]
  * Fully qualify pointer type namespaces in signals so that the
    parameters can be used in qml.

 -- Timo Jyrinki <timo.jyrinki@canonical.com>  Tue, 10 Jan 2017 06:42:45 +0000

unity-api (8.0+17.04.20161215-0ubuntu1) zesty; urgency=medium

  * unity::shel::application - changes for the miral way of doing things

 -- Daniel d'Andrada <daniel.dandrada@canonical.com>  Thu, 15 Dec 2016 16:16:07 +0000

unity-api (7.121+17.04.20161205-0ubuntu1) zesty; urgency=medium

  * Add AppDrawerModelInterface

 -- Michael Zanetti <michael.zanetti@canonical.com>  Mon, 05 Dec 2016 15:20:31 +0000

unity-api (7.120+17.04.20161123-0ubuntu1) zesty; urgency=medium

  [ Andrea Azzarone ]
  * Add hasSeparator role to quicklistModel.

  [ Marcus Tomlinson ]
  * Don't rely on glib error message strings in IniParser_test (LP:
    #1642673)

 -- Andrea Cimitan <andrea.cimitan@canonical.com>  Wed, 23 Nov 2016 12:11:04 +0000

unity-api (7.119+16.10.20160909-0ubuntu1) yakkety; urgency=medium

  [ Daniel d'Andrada ]
  * Added MirSurfaceInterface::confinesMousePointer

 -- Michał Sawicz <michal.sawicz@canonical.com>  Fri, 09 Sep 2016 14:39:28 +0000

unity-api (7.118+16.10.20160830-0ubuntu1) yakkety; urgency=medium

  [ Nick Dedekind ]
  * Added persistent Id property for MirSurface

 -- Ken VanDine <ken.vandine@canonical.com>  Tue, 30 Aug 2016 13:40:30 +0000

unity-api (7.117+16.10.20160819-0ubuntu1) yakkety; urgency=medium

  * Removed empty unreleased entry from changelog. (LP: #1613563)

 -- Michi Henning <michi@triodia.com>  Fri, 19 Aug 2016 22:16:23 +0000
